applied more design

--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -15,11 +15,11 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
+		<a href="index.html"><img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></a></span></li>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic">Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -46,28 +46,49 @@
 
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
-<div id="aboutusbg">
+<div class="transparentbg">
 <div id="aboutus">
+	<div class="box firstblue">
+	<h1 class="headerinner">About Us</h1>
+	</div>
+
+	<div id="fishtastic">
+	<div class="transparentbg">
 	<h1>What is Fish-Tastic?!</h1>
+
+	
 	<div class="box firstblue"><p>Founded in 2013 by Mr K.H.Chan, the co-sponsor of Singapore Sea Aquarium.</p> </div>
 	
 	<div class="box secondblue"><p>FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. We also carries products such as accessories and fish foods of many well-known brands, <br>such as Hikari, Tropical, and Rio.</p> <p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p></div> 
 	
 	<div class="box thirdblue"><p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday.</p> 
 	<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p></div>
+	</div>
+	</div>
 	
-	<div class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p><p>We were nominated by members of the public for our excellence in service, products and social responsibility. We are thankful for the recognition.</p></div>
+	
+	<div class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p><p>We were nominated by members of the public for our excellence in service, products and social responsibility. We are thankful for the recognition.</p>
+  	<ul class="picturelist">
+	  <li><img src="images/Singapore Outstanding Enterprise 2014 award 2.jpg" width="250" height="200" alt=""/></li>
+	  <li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.jpg" alt=""/></li>
+	 </ul>
+	  
+	  </div>
 	
 	<div class="box fifthblue"><h2>Company Mission</h2>
-	<p>To diversify the delights and pleasure of fishkeeping to the society</p>
+	  <img src="images/mission.png" width="200" height="200" alt=""/>
+<p>To diversify the delights and pleasure of fishkeeping to the society</p>
 	<h2>Company Vision</h2>
-	<p>To be the number one fish aquarium in the global market</p></div>
+	<img src="images/vision.png" width="200" height="200" alt=""/>
+<p>To be the number one fish aquarium in the global market</p></div>
 </div>
 </div>
 
 <div id="faqbq">
 <div id="faq">
   <h1>FAQ</h1>
+  <h2>Frequently Asked Questions <br> <br>
+    <img src="images/FAQ-512.png" width="200" height="200" alt=""/></h2>
 <button class="question" value="Show" onclick="this.value=this.value=='Show'?'Hide':'Show';">How many tropical fish can I have?</button>
 <div class="answer"><div>
 	The often stated general rule of thumb (don't stock your tank using this rule!) is 1 inch of fish per gallon of water. Remember to use the future adult size of your fish when computing the total inches of fish you can have.
@@ -100,7 +121,10 @@
 <div class="answer"><div>
 	Your fish need some "down time" just like you do. Sure, they don't crawl under the covers and go to sleep, but they do hunker down in a quiet place and rest at night.
 </div></div>
+
+<p align="right">Please click to see the answer</p>
 </div>
+
 </div></div>
 <!-- InstanceEndEditable -->
 
