--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -15,11 +15,11 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
+		<a href="index.html"><img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></a></span></li>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic">Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -46,91 +46,120 @@
 
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
-	<div id="petshop">
+ <div class="transparentbg">
+  <div class="box firstblue">
+	<h1 class="headerinner">Announcement</h1>
+	</div>
+	
+  <div id="petshop" class="box secondblue">
+	  <h1>Grand Opening of PeTastic!!! <br> <img src="images/petshopicon.jpg" width=" 150" height=" 150" alt="petshopicon"/></h1>
+	  
+	<h2>On 1st July 2017</h2>
+		<h3>Specialised on Puppies and Veterinary <br> Come and Visit Us!</h3>
+		<p>PeTastic will come with different kinds of puppies and pet accessories. We will also provide variety of pet supplies, like food, treats, toys, leashes and many more! </p>
+		
+	  <h4>-Please Take Us Home-</h4>
+		<ul class="picturelist"> 
+		
+			<li><a href="images/golden-retriever-puppy.jpg"><img src="images/smallgoldenretriver.jpg" width="200" height="" alt="smallGolden"/></a></li>
+			
+			<li><a href="images/puppies.jpg"><img src="images/puppiessmall.jpg" width="200" height="" alt="smallShiba"/></a></li>
+			
+			<li><a href="images/puppy.jpg"><img src="images/puppysmallss.jpg" width="200" height="" alt="smallPoodle"/></a></li>
+			
+			<li><a href="images/puppyy.jpg"><img src="images/puppysmall.jpg" width="200" height="" alt="smallPuppy"/></a></li>
+		</ul>
+		
+  </div>
+	
+  <div id="koi" class="box thirdblue">
+  	
+	<h1>Landscape and Koi Classes <br> <img src="images/koi_fish.png" width="150" height="150" alt=""/></h1>
+		
+<p>Koi are domesticated carp, first bred for their markings and colorations in Japan in the early 1820s. <br><br> 
+<img src="images/koi.jpg" width="300" height="" alt="koiicon"/></p>
+		
+		
+		<h3>The primary functions of a koi pond are:</h3>
+		<p>Maximize fish health</p>
+		<p>Provide a beautiful water feature complimentary to the beauty of the koi.</p>
+		
+		
+	<h2>Wanna know about Setting up Landscapes and Koi Ponds? <br><br> <img src="images/koipond.jpg" width="500" height="" alt="koipond"/> </h2>
+	<p> Landscape and Koi Pond Exhibition <br> on<b> 6th June 2017</b></p>
+	  <p>Landscaping Competition <br> on <b>30th November 2017</b></p>
+		
+    <p>Please <a href="contactus.html">contact us</a> for admissions and more information</p>
 		
 	</div>
 	
-	<div id="koi">
-		<p>Koi are domesticated carp, first bred for their markings and colorations in Japan in the early 1820s. </p>
+  <div id="events" class="box fourthblue">
+		<h2>Events List <br><img src="images/calender.png" width=" 150" height=" 150" alt="eventsicon"/></h2>
 		
-		<p>The primary functions of a koi pond are:
-
-		<ul>
-		<li>Maximize fish health</li>
-		<li>Provide a beautiful water feature complimentary to the beauty of the koi.</li></ul>
-		
-		
-		Koi ponds are typically deeper than the average ornamental water garden.  The added depth:
-
-		Allows the koi to reach larger sizes and have both vertical as well as lateral swimming patterns.
-		Creates a safe zone beneath the reach of pond predators.
-		Maintains a more constant water temperature throughout the day.
-		Increases water volume greatly without increasing the “footprint” of the pond, thus increasing healthy fish holding capacity
-		koi-pond_waterfall-fish
-		Water quality is essential to maximizing fish health in a koi pond. </p>We recommend and install:
-
-		Aquadyne pressurized bead filters for biological and fine particulate filtration.
-		High volume, low head centrifugal pumps to economically recirculate the pond water.
-		UV sterilizers to maintain water clarity and reduce harmful protozoa in the water.
-		Living plant filters to assist with bio-filtration and “polish” the water.
-		Bottom suction to provide mixing of the water and remove excess fish waste buildup.
-		100_0088-e-t
-		As with all our water features, the appropriate presentation of a koi pond is vital. We can construct the koi pond to fit a budget or a style by using a variety of construction materials.  We can create a complete Japanese setting with our extensive Asian plant selection if you desire.</p>
-	</div>
-	
-	<div id="events">
-		<h2>Events</h2>
-		<table align="center">
+			 
+<table align="center">
 	  <tr>
-		<th>Event</th>
+		<th>Event Name</th>
 		<th>Date</th>
-	  </tr>
-	  <tr>
-		<td>Landscaping competition</td>
-		<td>30th November 2017</td>
-	  </tr>
-	  <tr>
-		<td>Fish Forum</td>
-		<td>5th October 2017</td>
-	  </tr>
-	  <tr>
-		<td>Fish exhibition</td>
-		<td>15th December 2017</td>
 	  </tr>
 	  <tr>
 		<td>Landscape &amp; Koi Pond exhibition</td>
 		<td>6th June 2017</td>
 	  </tr>
+	  
 	  <tr>
-		<td>Vet consultation service - FREE</td>
-		<td>15th November 2017</td>
-	  </tr>
-	  <tr>
-		<td>Puppies fashion show</td>
-		<td>1st January 2018</td>
-	  </tr>
-	  <tr>
-		<td>Pets fashion show</td>
-		<td>19th January 2018</td>
-	  </tr>
-	  <tr>
-		<td>Pets grooming services</td>
+	  	<td>Pets grooming services</td>
 		<td>8th August 2017</td>
 	  </tr>
+	  
 	  <tr>
-		<td>Puppy show with Animal Planet</td>
+	  	<td>Puppy show with Animal Planet</td>
 		<td>20th August 2017</td>
 	  </tr>
-	  <tr>
-		<td>Pets grooming competition</td>
-		<td>9th December 2017</td>
-	  </tr>
+	  
 	  <tr>
 		<td>Special event with dog whisperer</td>
 		<td>20th September 2017</td>
 	  </tr>
+	  
+	  <tr>
+	
+	  <td>Fish Forum</td>
+		<td>5th October 2017</td>
+	</tr>
+	 
+	  <tr>
+	   <td>Vet consultation service - FREE</td>
+		<td>15th November 2017</td>
+	  </tr>
+	  
+	  <tr>
+	  <td>Landscaping competition</td>
+		<td>30th November 2017</td>
+	  </tr>
+	  
+	   <tr>
+		<td>Pets grooming competition</td>
+		<td>9th December 2017</td>
+	  </tr>
+	  
+	  <tr>
+		<td>Fish exhibition</td>
+		<td>15th December 2017</td>
+	  </tr>
+
+	  <tr>
+		<td>Puppies fashion show</td>
+		<td>1st January 2018</td>
+	  </tr>
+	 
+	  <tr>
+		<td>Pets fashion show</td>
+		<td>19th January 2018</td>
+	  </tr>
 	</table>
 	</div>
+ </div>
 </div>
 <!-- InstanceEndEditable -->
 
