--- a/A2 site/contactus.html
+++ b/A2 site/contactus.html
@@ -46,15 +46,23 @@
 
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
-	<div id="contactus">
-	<h2>Contact us</h2>
+	<div class="box firstblue">
+	<h1 class="headerinner">Contact us</h1>
+	</div>
+	
+	<div id="contactus" class="secondblue">
 		<a href="https://www.instagram.com/weare_fishtastic/"><img src="images/instagram-icon.png" alt="instagram icon"></a>
-		<p><b>Address:</b> 83 Punggol Central Waterway Point, Singapore 828761 #01-11</p>
 		<p><strong>Contact number:</strong> +65 6383 0111</p>
-		<p><b>Email:</b> <a href="mailto:enquires@fishtastic.com">enquires@fishtastic.com</a> (You should expect to hear a response within 1-2 working days)</p>
+		<p><b>Email:</b> <a href="mailto:enquires@fishtastic.com">enquires@fishtastic.com</a> <br>(You should expect to hear a response within 1-2 working days)</p>
+		<p><b>Address:</b> 83 Punggol Central Waterway Point, Singapore 828761 #01-11</p>
 		<p><b>Operating Hours:</b> 10am - 9pm</p>
 		<p><b>Locate us:</b><br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.6168295368634!2d103.89967921476008!3d1.4061517617836445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da15e4a68f302d%3A0x31aca96bff05c660!2sWaterway+Point!5e0!3m2!1sen!2ssg!4v1494846733346" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 	</div>
+</div>
+
+<div id="faqredirect" class="thirdblue">
+  <h2>Please check out the FAQ section to find the answers!</h2>
+	<h3><a href="aboutus.html#faq">Frequently Asked Questions <br><br><img src="images/FAQ-512.png" width="300" height="300" alt=""/></a></h3>
 </div>
 <!-- InstanceEndEditable -->
 
