--- a/A2 site/index.html
+++ b/A2 site/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Home - FishTastic</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -15,9 +15,9 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic"> Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -90,7 +90,7 @@
       <img src="images/koi_fish.png" width="200" height="200" alt="koiicon"/> </a></div>
        
       <div class="announcementList">
-        <a href="announcements.html#eventlist">
+        <a href="announcements.html#events">
         <h2>Newly arranged more exciting <br>EVENTS<br> to participate</h2>
         <p>Includes competitions, exhibitions, consultations, and lot more!</p>
       <img src="images/calender.png" width="200" height="200" alt="eventsicon"/></a> </div>
