--- a/A2 site/services.html
+++ b/A2 site/services.html
@@ -46,8 +46,8 @@
 
 <!-- InstanceBeginEditable name="content" -->
 <div id="content">
-	<div id="serviceheader">
-		<h1>Services </h1>
+	<div id="serviceheader" class="firstblue">
+		<h1 class="headerinner">Services </h1>
 		
 		<a href="services.html#delivery"> <h2>Delivery <br>
 		<img src="images/TRUCK-icon-01.png" width="200" height="" alt="truckicon"/></h2></a>
@@ -58,8 +58,8 @@
 		<br><br> <img src="images/refund.png" width="180" height="" alt="refundicon"/></h2></a>
 	</div>
 	
-	<div id="delivery" class="firstblue">
-		<h1>Delivery Service</h1>
+	<div id="delivery" class="secondblue">
+	  <h1>Delivery Service</h1>
 		<h2>
 			Free Delivery is applicable for you</h2> 
          <img src="images/TRUCK-icon-01.png" width="200" height="" alt=truckicon""/>
@@ -92,7 +92,7 @@
 		
 	</div>
 	
-	<div id="consultation" class="secondblue">
+	<div id="consultation" class="thirdblue">
 		<h1>Consultation</h1>
 		<img src="images/consult.png" width="200" height="" alt="consulticon"/>
 		
@@ -108,7 +108,7 @@
 		
 	</div>
 	
-	<div id="refund" class="thirdblue">
+	<div id="refund" class="fourthblue">
 		<h1>Refund and Exchange Policy</h1>
 		<img src="images/refund.png" width="200" height="" alt="refundicon"/></h2>
 		
