--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -15,11 +15,11 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
+		<a href="index.html"><img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></a></span></li>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic">Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -45,10 +45,13 @@
 	
 
 <!-- InstanceBeginEditable name="content" -->
+
 <div id="content">
+<div class="transparentbg">
+<a href="orderform.html"><div id="toOrderForm"><p>Order Now</p></div></a>
 <div id="fishproduct">
 	<div class="box firstblue">
-	  <h1>Product</h1></div>
+    <h1 class="headerinner">Product</h1></div>
 	
 	<div class="box secondblue" id="fish">
 		<h2>Fish</h2>
@@ -468,6 +471,7 @@
 		  </li>
 		  
 		</ul>
+  	</div>
   	</div>
 </div></div>
 <!-- InstanceEndEditable -->
