clean up unused images

--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -69,8 +69,8 @@
 	
 	<div class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p><p>We were nominated by members of the public for our excellence in service, products and social responsibility. We are thankful for the recognition.</p>
   	<ul class="picturelist">
-	  <li><img src="images/Singapore Outstanding Enterprise 2014 award 2.jpg" width="250" height="200" alt=""/></li>
-	  <li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.jpg" alt=""/></li>
+	  <li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.png" width="300" height="212" alt="outstandingEnterpriseAsia2014"/></li>
+	  <li><img src="images/Singapore-Outstanding-Enterprise.png" width="300" height="300" alt="outstandingEnterpriseSG2014"/></li>
 	 </ul>
 	  
 	  </div>
