--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -52,7 +52,8 @@
 	</div>
 	
   <div id="petshop" class="box secondblue">
-	  <h1>Grand Opening of PeTastic!!! <br> <img src="images/petshopicon.jpg" width=" 150" height=" 150" alt="petshopicon"/></h1>
+	  <h1>Grand Opening of PeTastic!!! <br> 
+      <img src="images/petshopicon.png" width="200" height="200" alt="petshopicon"/></h1>
 	  
 	<h2>On 1st July 2017</h2>
 		<h3>Specialised on Puppies and Veterinary <br> Come and Visit Us!</h3>
