--- a/A2 site/services.html
+++ b/A2 site/services.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Services - FishTastic</title>
 <!-- InstanceEndEditable -->
 <link href="css/mastercss.css" rel="stylesheet" type="text/css">
 <link href="css/content.css" rel="stylesheet" type="text/css">
