--- a/A2 site/products.html
+++ b/A2 site/products.html
@@ -61,8 +61,7 @@
 			<a href="#guppy"><img src="images/products/guppy.jpg" width="250" height="250" alt="guppy" />
 			  <span class="textcaption"><span>Guppy <br>$0.80/fish</span></span>
 			</a>
-			<div id="g
-			uppy" class="modalDialog">
+			<div id="guppy" class="modalDialog">
 			<div>
 				<a href="#close" title="Close" class="close">x</a>
 				<h2>Guppy</h2>
