some updates and new logo

--- a/A2 site/announcements.html
+++ b/A2 site/announcements.html
@@ -75,10 +75,10 @@
 	
   <div id="koi" class="box thirdblue">
   	
-	<h1>Landscape and Koi Classes <br> <img src="images/koi_fish.png" width="150" height="150" alt=""/></h1>
+	<h1>Landscape and Koi Classes <br> <img src="images/koi_fish.png" width="150" height="150" alt="koiicon"/></h1>
 		
-<p>Koi are domesticated carp, first bred for their markings and colorations in Japan in the early 1820s. <br><br> 
-<img src="images/koi.jpg" width="300" height="" alt="koiicon"/></p>
+	<p>Koi are domesticated carp, first bred for their markings and colorations in Japan in the early 1820s. <br><br> 
+	<img src="images/koi.jpg" width="300" height="" alt="koiicon"/></p>
 		
 		
 		<h3>The primary functions of a koi pond are:</h3>
