--- a/A2 site/contactus.html
+++ b/A2 site/contactus.html
@@ -65,10 +65,12 @@
 	<h3><a href="aboutus.html#faq">Frequently Asked Questions <br><br><img src="images/FAQ-512.png" width="300" height="300" alt=""/></a></h3>
 </div>
 
-<div>
-	<form action="">
+<div id="feedback" class="fourthblue">
+	<h1> Feedback form </h1>
+	<h2>Please help us to improve your experience!</h2> 
+	<form id="feedbackform" action="">
 		<fieldset>
-		<legend>Feedback form</legend>
+		<legend>Feedback</legend>
 		<input name="name" type="text" required id="name" placeholder="Name"><br><br>
 	  	<input name="email" type="email" required id="email" placeholder="Email" onChange="validateEmail()"><br><br>
 	  	<label for="needed">Did you find what you needed?</label><br>
