--- a/A2 site/index.html
+++ b/A2 site/index.html
@@ -46,7 +46,7 @@
 	<div id="hometitle">
 	
 	<div id="logoholder">
-	<img src="images/Fish-Tastic%20logo.png" width="500" height="" alt="fishtasticbiglogo"/></div>
+	  <img src="images/newLogo.png" width="220" height="270" alt="newfishtasticlogo"/></div>
 	<p>
   	"It is truly a privilege to be able to look at a part of the ocean everyday"
 	</p>
@@ -58,14 +58,14 @@
 	</div>
 
 	<div class="redirect">	 
-	<a href="index.html#announcement"> <h1>What's New? <br> &#8595 &#8595 &#8595</h1></a>	
+	<a href="#announcement"> <h1>What's New? <br> &#8595 &#8595 &#8595</h1></a>	
 	</div>
 </div>
 
 <div class="bigbutton"><!-- InstanceBeginEditable name="services" -->
   <a href="services.html">
   <h1>FREE DELIVERY SUPPLIES</h1>
-  <p>Learn more >>></p></a><!-- InstanceEndEditable --></div>
+  <p>Learn more &gt;&gt;&gt; </p></a><!-- InstanceEndEditable --></div>
 
 <div class="content" id="two">
 	 <div id="announcement"><!-- InstanceBeginEditable name="announcement" -->
@@ -80,11 +80,11 @@
         <a href="announcements.html#petastic">
         <h2>Grand Opening of "PeTastic"</h2> 
         <p>A new business from our family<br> specializes in Pet and Veterinary! </p>
-        <img src="images/petshopicon.jpg" width="200" height="200" alt="petshopicon"/></a>
+        <img src="images/petshopicon.png" width="200" height="200" alt="petshopicon"/></a>
       </div>
        
    	  <div class="announcementList">
-        <a href="announcements.html#koipond">
+        <a href="announcements.html#koi">
         <h2>New classes </h2>
         <p>Setting up <b>Landscapes</b> and <b>Koi Ponds</b> <br> For residential and corporate customers</p>
       <img src="images/koi_fish.png" width="200" height="200" alt="koiicon"/> </a></div>
