small changes in awards part

--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -67,12 +67,14 @@
 	</div>
 	
 	
-	<div class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p><p>We were nominated by members of the public for our excellence in service, products and social responsibility. We are thankful for the recognition.</p>
+	<div id="awards" class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p>
   	<ul class="picturelist">
-	  <li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.png" width="300" height="212" alt="outstandingEnterpriseAsia2014"/></li>
-	  <li><img src="images/Singapore-Outstanding-Enterprise.png" width="300" height="300" alt="outstandingEnterpriseSG2014"/></li>
+  		<li><img src="images/Singapore-Outstanding-Enterprise.png" width="300" height="300" alt="outstandingEnterpriseSG2014"/></li>
+	 
+	  	<li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.png" width="300" height="212" alt="outstandingEnterpriseAsia2014"/></li>
 	 </ul>
-	  
+	<p>We were nominated by members of the public for our excellence in service, products and social responsibility. <br> We are thankful for the recognition.</p>
+  	  
 	  </div>
 	
 	<div class="box fifthblue"><h2>Company Mission</h2>
