--- a/report.html
+++ b/report.html
@@ -41,13 +41,37 @@
 <h2>References</h2>
 <p>references (links) for any code, images or content that you have used that are not your own</p>
 <ul>
-    <li>...</li>
+    	<li>http://kieferlandscapinginc.com/water-gardens/koi-ponds (Content)</li>
+	<li>http://www.eastoceansg.com/how-we-deliver (Content)</li>
+	<li>http://wallpapersafari.com/w/F7Umx0/
+http://1.bp.blogspot.com/-TpspJavELYc/Uo3DIGFCz3I/AAAAAAAAICI/sRIT9EJBdMI/s1600/Undersea04.jpg
+https://images8.alphacoders.com/443/thumb-1920-443242.jpg
+https://artkustiks.files.wordpress.com/2011/04/koi-9x2-oil-on-canvas-120cmx180cm-rp-16-500-000.jpg
+https://wallpapersafari.com/clown-fish-wallpaper/</li>
+
 </ul>
 <h2>PMI</h2>
 <p>your group should spend some time reflecting on the process and describe here the Pluses, Minuses and Interesting
     aspects of your teamwork process and result</p>
-<p><strong>Pluses: </strong> ...</p>
-<p><strong>Minuses: </strong> ...</p>
+
+<p><strong>Pluses: </strong> <ul>
+	<li>Results is amazing and exceeds our expectations.</li>
+	<li>We split the works properly, effectively and efficently.</li>
+	<li>Members expresses ideas well so that the design and content were made collaboratively. Each member group listened to each other's opinions</li>
+	<li>Communication went well. Members did work directly when one needs the progress to advance and always inform to each other constantly if any progress happens.</li>
+	<li>We helped each other in any issues we are facing on. We took over one's task if the member cannot do it or finish it.</li>
+	<li>We trusted each other well. The work progressed smoothly.</li>
+
+ </p>
+<p><strong>Minuses: </strong> <ul> 
+	<li>Some disagreements (in content and styling) happened in teamwork process.</li>
+	<li>Laziness spread to each other in the group. If one member is not working, the other one follows.</li>
+	<li>Group members had some other works therefore group member cannot prioritize the progress on time.</li>
+	<li>Certain individual is being dominant.</li>
+	<li>Each members are too dependent to each other. We did not check each others error until last minute.</li>
+
+</p>
+
 <p><strong>Interesting: </strong> (including significant lessons) ...</p>
 </body>
 </html>
