--- a/report.html
+++ b/report.html
@@ -48,6 +48,7 @@ http://1.bp.blogspot.com/-TpspJavELYc/Uo3DIGFCz3I/AAAAAAAAICI/sRIT9EJBdMI/s1600/
 https://images8.alphacoders.com/443/thumb-1920-443242.jpg
 https://artkustiks.files.wordpress.com/2011/04/koi-9x2-oil-on-canvas-120cmx180cm-rp-16-500-000.jpg
 https://wallpapersafari.com/clown-fish-wallpaper/</li>
+	<li>www.google.com for most fish images.</li>
 
 </ul>
 <h2>PMI</h2>
@@ -55,23 +56,26 @@ https://wallpapersafari.com/clown-fish-wallpaper/</li>
     aspects of your teamwork process and result</p>
 
 <p><strong>Pluses: </strong> <ul>
-	<li>Results is amazing and exceeds our expectations.</li>
-	<li>We split the works properly, effectively and efficently.</li>
-	<li>Members expresses ideas well so that the design and content were made collaboratively. Each member group listened to each other's opinions</li>
-	<li>Communication went well. Members did work directly when one needs the progress to advance and always inform to each other constantly if any progress happens.</li>
-	<li>We helped each other in any issues we are facing on. We took over one's task if the member cannot do it or finish it.</li>
-	<li>We trusted each other well. The work progressed smoothly.</li>
+	<li>The result was great to us and exceeds our expectations.</li>
+	<li>We split the work properly, effectively and efficently.</li>
+	<li>Members expressed their ideas well so that the design and content were made collaboratively. Each group member listened to the other's opinions.</li>
+	<li>Communication went well. We took turns doing our work in stages as there were parts which required the other member's work and always informed each other when we did it to keep them updated. </li>
+	<li>We helped each other in any issues we are facing on. We took over a task if the other member cannot do it or finish it.</li>
+	<li>We trusted each other well. The work progressed smoothly.</li></ul>
 
  </p>
 <p><strong>Minuses: </strong> <ul> 
 	<li>Some disagreements (in content and styling) happened in teamwork process.</li>
 	<li>Laziness spread to each other in the group. If one member is not working, the other one follows.</li>
-	<li>Group members had some other works therefore group member cannot prioritize the progress on time.</li>
-	<li>Certain individual is being dominant.</li>
-	<li>Each members are too dependent to each other. We did not check each others error until last minute.</li>
-
+	<li>Group members had some other work therefore this was not prioritized well.</li>
+	<li>There were times when one was too dominant.</li>
+	<li>Members are too trustworthy of each other. We did not check each other's error until last minute.</li>
+	</ul>
 </p>
 
-<p><strong>Interesting: </strong> (including significant lessons) ...</p>
+<p><strong>Interesting: </strong> (including significant lessons) <ul>
+	<li>Javascript is not that hard to understand.</li>
+	<li>Aesthetic design is extremely important to the success of a website.</li>
+</ul></p>
 </body>
 </html>
