forgot about placeholders

--- a/A2 site/orderform.html
+++ b/A2 site/orderform.html
@@ -57,30 +57,30 @@
 			<tbody>
 				<tr>
 					<td>First Name:</td>
-					<td><input name="firstname" type="text" required  id="firstname" size="20" maxlength="50"></td>
+					<td><input name="firstname" type="text" required  id="firstname" placeholder="e.g. James" size="20" maxlength="50"></td>
 					
 				</tr>
 				<tr>
 					<td>Last Name:</td>
-					<td><input name="lastname" type="text" required  id="lastname" maxlength="50"></td>
+					<td><input name="lastname" type="text" required  id="lastname" placeholder="e.g. Cook" maxlength="50"></td>
 					
 					<td rowspan="5"><span class="rightside" id="selPro">Selected Products:</span><br><br><select name="productlist" size="10" id="productlist"></select> </td> 
 				</tr>
 				<tr>
 					<td>City:</td>
-					<td><input name="city" type="text" required id="city" maxlength="50"></td>
+					<td><input name="city" type="text" required id="city" placeholder="e.g. Singapore" maxlength="50"></td>
 				</tr>
 				<tr>
 					<td>Postal Code:</td>
-					<td><input name="postalcode" type="text" required id="postalcode"></td>
+					<td><input name="postalcode" type="text" required id="postalcode" placeholder="e.g. 123456"></td>
 				</tr>
 				<tr>
 					<td>Contact Number:</td>
-					<td><input name="contact" type="text" required id="contact"></td>
+					<td><input name="contact" type="text" required id="contact" placeholder="e.g. 98765432"></td>
 				</tr>
 				<tr>
 					<td>Email Address:</td>
-					<td><input name="email" type="email" required id="email" onChange="validateEmail()"></td>
+					<td><input name="email" type="email" required id="email" placeholder="e.g. enquires@fishtastic.com" onChange="validateEmail()"></td>
 				</tr>
 				<tr>
 					<td>Product Type:</td>
