updates on pages, change some styling etc

--- a/A2 site/contactus.html
+++ b/A2 site/contactus.html
@@ -15,11 +15,11 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
+		<a href="index.html"><img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></a></span></li>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic">Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -51,12 +51,13 @@
 	</div>
 	
 	<div id="contactus" class="secondblue">
-		<a href="https://www.instagram.com/weare_fishtastic/"><img src="images/instagram-icon.png" alt="instagram icon"></a>
 		<p><strong>Contact number:</strong> +65 6383 0111</p>
-		<p><b>Email:</b> <a href="mailto:enquires@fishtastic.com">enquires@fishtastic.com</a> <br>(You should expect to hear a response within 1-2 working days)</p>
+		<p><b>Email:</b> <a href="mailto:enquires@fishtastic.com">enquires@fishtastic.com</a> <br>(You should expect to hear a response within 1-2 days)</p>
 		<p><b>Address:</b> 83 Punggol Central Waterway Point, Singapore 828761 #01-11</p>
-		<p><b>Operating Hours:</b> 10am - 9pm</p>
+		<p><b>Operating Hours:</b><br>Mon-Fri: 10am - 9pm <br>Sat-Sun: 11am - 5pm</p>
 		<p><b>Locate us:</b><br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.6168295368634!2d103.89967921476008!3d1.4061517617836445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da15e4a68f302d%3A0x31aca96bff05c660!2sWaterway+Point!5e0!3m2!1sen!2ssg!4v1494846733346" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+		<p><b>Follow us:</b><br><a href="https://www.instagram.com/weare_fishtastic/"><img src="images/instagram-icon.png" alt="instagram icon"></a></p>
+
 	</div>
 </div>
 
@@ -67,7 +68,8 @@
 
 <div id="feedback" class="fourthblue">
 	<h1> Feedback form </h1>
-	<h2>Please help us to improve your experience!</h2> 
+	<h2>Please help us to improve your experience!</h2>
+
 	<form id="feedbackform" action="">
 		<fieldset>
 		<legend>Feedback</legend>
@@ -106,6 +108,7 @@
 
 
 </body>
+
 <footer>
 	<h1>© Fish-Tastic</h1>
 	<p>83 Punggol Central Waterway Point #01-11, Singapore 828761 <br>
@@ -113,5 +116,7 @@
 	E: enquires@fishtastic.com 
 	</p>
 </footer>
+
+
 
 <!-- InstanceEnd --></html>
