--- a/A2 site/services.html
+++ b/A2 site/services.html
@@ -15,11 +15,11 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
+		<a href="index.html"><img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></a></span></li>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic">Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -136,5 +136,7 @@
 	E: enquires@fishtastic.com 
 	</p>
 </footer>
+
+
 
 <!-- InstanceEnd --></html>
