--- a/A2 site/aboutus.html
+++ b/A2 site/aboutus.html
@@ -52,37 +52,34 @@
 	<h1 class="headerinner">About Us</h1>
 	</div>
 
+
 	<div id="fishtastic">
 	<div class="transparentbg">
-	<h1>What is Fish-Tastic?!</h1>
+	
+		<div class="box firstblue"><h1>What is Fish-Tastic?!</h1><p>Founded in 2013 by Mr K.H.Chan, the co-sponsor of Singapore Sea Aquarium.</p> </div>
 
-	
-	<div class="box firstblue"><p>Founded in 2013 by Mr K.H.Chan, the co-sponsor of Singapore Sea Aquarium.</p> </div>
-	
-	<div class="box secondblue"><p>FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. We also carries products such as accessories and fish foods of many well-known brands, <br>such as Hikari, Tropical, and Rio.</p> <p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p></div> 
-	
-	<div class="box thirdblue"><p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday.</p> 
-	<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p></div>
+		<div class="box secondblue"><p>FISH~TASTIC sells a variety of fishes with prices ranging from affordable to luxurious. We also carries products such as accessories and fish foods of many well-known brands, <br>such as Hikari, Tropical, and Rio.</p> <p>We have trading partners worldwide, whom we have business dealings with in countries all over the world. We continue to explore and look for trading partners in other parts of the world, so as to acquire more products to develop our farm into a one-stop shopping paradise for all fish lovers.</p></div> 
+
+		<div class="box thirdblue"><p>Come and visit our store to make your marine aquarium beautiful and pristine. We are here to share our knowledge and make your hobby as easy as possible. We believe that it is truly a privilege to be able to look at a part of the ocean everyday.</p> 
+		<p>If you have any questions, please feel free to <a href="contactus.html">contact us</a> by phone or email.</p></div>
 	</div>
 	</div>
 	
-	
-	<div id="awards" class="box fourthblue"><h2>Awards</h2><p>Top Asia Enterprise 2014 and Singapore’s Outstanding Enterprise 2014 </p>
-  	<ul class="picturelist">
-  		<li><img src="images/Singapore-Outstanding-Enterprise.png" width="300" height="300" alt="outstandingEnterpriseSG2014"/></li>
-	 
-	  	<li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.png" width="300" height="212" alt="outstandingEnterpriseAsia2014"/></li>
-	 </ul>
-	<p>We were nominated by members of the public for our excellence in service, products and social responsibility. <br> We are thankful for the recognition.</p>
+	<div id="awards" class="box fourthblue"><h2>Awards</h2>		<p>Top Asia Enterprise 2014 and Singapore’s 		Outstanding Enterprise 2014 </p>
+  		<ul class="picturelist">
+  			<li><img src="images/Singapore-Outstanding-Enterprise.png" width="300" height="300" alt="outstandingEnterpriseSG2014"/></li>
+	  		<li><img src="images/ASIA-TOP-OUTSTANDING-ENTERPRISE2014 award 1.png" width="300" height="212" alt="outstandingEnterpriseAsia2014"/></li>
+	 	</ul>
+		<p>We were nominated by members of the public for our excellence in service, products and social responsibility. <br> We are thankful for the recognition.</p>
   	  
 	  </div>
 	
-	<div class="box fifthblue"><h2>Company Mission</h2>
-	  <img src="images/mission.png" width="200" height="200" alt=""/>
-<p>To diversify the delights and pleasure of fishkeeping to the society</p>
-	<h2>Company Vision</h2>
-	<img src="images/vision.png" width="200" height="200" alt=""/>
-<p>To be the number one fish aquarium in the global market</p></div>
+		<div class="box fifthblue"><h2>Company Mission</h2>
+			<img src="images/mission.png" width="200" height="200" alt=""/>
+			<p>To diversify the delights and pleasure of fishkeeping to the society</p>
+			<h2>Company Vision</h2>
+			<img src="images/vision.png" width="200" height="200" alt=""/>
+			<p>To be the number one fish aquarium in the global market</p></div>
 </div>
 </div>
 
@@ -140,5 +137,7 @@
 	E: enquires@fishtastic.com 
 	</p>
 </footer>
+
+
 
 <!-- InstanceEnd --></html>
