--- a/A2 site/orderform.html
+++ b/A2 site/orderform.html
@@ -15,11 +15,11 @@
 <nav class="fixednavbar">
 	<ul>
 		<li><span>
-		<img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></span></li>
+		<a href="index.html"><img src="images/Fish-Tasticsmalllogo.png" width="200" height="" alt="fishTasticSmallLogo"/></a></span></li>
 		<li><a href="index.html">Home</a></li>
-		<li><a href="aboutus.html">Fish-Tastic?!</a>
+		<li><a href="aboutus.html">About Us</a>
 			<ul>
-				<li><a href="aboutus.html#aboutus">About Us</a></li>
+				<li><a href="aboutus.html#fishtastic">Fish-Tastic?!</a></li>
 				<li><a href="aboutus.html#faq">FAQ</a></li>
 			</ul>
 		</li>
@@ -145,7 +145,7 @@
 					<td></td>
 					<td><input type="button" id="add" value="Add this product" onClick="addPrice()"></td>
 				
-					<td><span class="rightside">Total Price:<br><span id="totalPrice">$<span id="total">0.00</span></span></span></td>
+					<td><span class="rightside" id="totalprice">Total Price:  $<span id="total">0.00</span></span></td>
 				</tr>
 			</tbody>
 		</table>
@@ -170,5 +170,7 @@
 	E: enquires@fishtastic.com 
 	</p>
 </footer>
+
+
 
 <!-- InstanceEnd --></html>
